plugins {
	id "java"
	id "idea"
	id "jacoco"
	alias libs.plugins.postCompileWeaving
}

dependencies {

	implementation libs.bundles.awsLambda,
			libs.awsSdkKms,
			libs.powertoolsParameters,
			libs.awsSdkApacheHttpClient,
			project(":libs:ais-service"),
			project(":libs:audit-service"),
			project(":libs:common-services"),
			project(":libs:evcs-service"),
			project(":libs:oauth-key-service"),
			project(":libs:user-identity-service"),
			project(":libs:verifiable-credentials")

	compileOnly	libs.lombok
	annotationProcessor libs.lombok

	testImplementation libs.hamcrest,
			libs.assertJ,
			libs.jacksonDatabind,
			libs.junitJupiter,
			project(path: ':libs:common-services', configuration: 'tests'),
			project(path: ':libs:test-helpers')

	testRuntimeOnly(libs.junitPlatform)
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

test {
	useJUnitPlatform ()
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required.set(true)
	}
}
